# yah

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  NARROW_CONSTANT_PROPAGATION.md  README.md  TODOS.md  bench-cold-start.sh
yah-cli/: Cargo.toml
yah-cli/src/: main.rs
yah-cli/tests/: integration.rs
yah-core/: Cargo.toml
yah-core/benches/: classify_bench.rs
yah-core/fuzz/: Cargo.toml
yah-core/fuzz/artifacts/fuzz_classify/: crash-bd6d2fcac5f78259751bc9d2eda3d030b8748857  crash-f377c0a871ac289bbb40bce38557a5fbbae8a2ad
yah-core/fuzz/artifacts/fuzz_classify_context/: crash-56af64a8b59752349c0c80d1753ffc3c11a3a176  crash-c059489ba03ce9cfb5387bda76d75922ac9dc017  crash-c0dcd96dd9bd9d2573d62c6f85e10225f418537d
yah-core/fuzz/fuzz_targets/: fuzz_classify.rs  fuzz_classify_context.rs
yah-core/src/: capability.rs  commands.rs  context.rs  lib.rs  paths.rs  walker.rs  wrappers.rs
yah-core/tests/: corpus.rs  proptest_classify.rs  repro_crash.rs
yah-core/tests/fixtures/: base64_pipe_bash.toml  bash_c_literal.toml  brew_install.toml  cargo_install.toml  chmod_644.toml  chmod_normal.toml  chmod_setuid.toml  command_substitution.toml  compound_and.toml  compound_or.toml  compound_semicolon.toml  cp_inside.toml  cp_secret_out.toml  curl_pipe_bash.toml  curl_simple.toml  dd_write.toml  doas_reboot.toml  dot_source.toml  eval_simple.toml  fail_closed_empty.toml  fail_closed_var_command.toml  git_clean_force.toml  git_clone.toml  git_commit_amend.toml  git_config_remote_url_set.toml  git_filter_branch.toml  git_force_push.toml  git_push_dynamic_flags.toml  git_push_normal.toml  git_rebase.toml  git_remote_set_url.toml  git_reset_hard.toml  kill_signal.toml  mkdir_inside.toml  mkdir_outside.toml  mv_outside.toml  nc_connect_only.toml  nc_listen.toml  node_e.toml  npm_install_bare.toml  (+60 more)
