[package]
name = "yah-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shell AST capability classifier — CLI"

[[bin]]
name = "yah"
path = "src/main.rs"

[dependencies]
yah-core = { path = "../yah-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
colored = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
