[package]
name = "yah-core"
version = "0.1.0"
edition = "2021"
description = "Shell AST capability classifier — core library"

[dependencies]
# Pin versions explicitly — tree-sitter 0.24.x uses the new C API; tree-sitter-bash
# must be a compatible version compiled against the same ABI.
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
