[package]
name = "yah-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shell AST capability classifier — core library"

[dependencies]
# tree-sitter-bash 0.25+ fixes a scanner serialize overflow (scanner.c line 103).
# tree-sitter-bash 0.25.x requires tree-sitter 0.25+ via tree-sitter-language 0.1 ABI.
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
proptest = "1"
criterion = "0.5"

[[bench]]
name = "classify_bench"
harness = false
